# ukcat

./: .env-sample  .gitignore  404.html  CNAME  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs-requirements.in  mkdocs-requirements.txt  mkdocs.yml  notebook-requirements.in  notebook-requirements.txt  pyproject.toml  readme.md  requirements.in  requirements.txt  sitemap.xml
.github/workflows/: linting.yml  main.yml  update.yml
applydata/: __main__.py  apply_icnptso.py  apply_ukcat.py
blog/: index.html
contact/: index.html
data/: charities_active-icnptso.csv  charities_inactive-icnptso.csv  cics-icnptso.csv  icnptso.csv  manual_adjustments.csv  sample.csv  top2000.csv  ukcat.csv
data/data-downloads/: index.html
data/outputs/: index.html
data/tag_list/: index.html
data/ukcat/AF/: index.html
data/ukcat/AF101/: index.html
data/ukcat/AF102/: index.html
data/ukcat/AF103/: index.html
data/ukcat/AF104/: index.html
data/ukcat/AN/: index.html
data/ukcat/AN101/: index.html
data/ukcat/AN102/: index.html
data/ukcat/AN103/: index.html
data/ukcat/AN104/: index.html
data/ukcat/AR/: index.html
data/ukcat/AR101/: index.html
data/ukcat/AR102/: index.html
data/ukcat/AR103/: index.html
data/ukcat/AR104/: index.html
data/ukcat/AR200/: index.html
data/ukcat/AR201/: index.html
data/ukcat/AR202/: index.html
data/ukcat/AR203/: index.html
data/ukcat/AR204/: index.html
data/ukcat/AR205/: index.html
data/ukcat/AR206/: index.html
data/ukcat/AR300/: index.html
data/ukcat/AR301/: index.html
data/ukcat/AR302/: index.html
data/ukcat/AR303/: index.html
data/ukcat/AR304/: index.html
data/ukcat/AR305/: index.html
data/ukcat/AR306/: index.html
data/ukcat/AR307/: index.html
docs/: contact.md  index.md  other-work.md  outputs.md
docs/data/: data-downloads.md  outputs.md  tag_list.md
docs/method/: designing-taxonomy.md  introduction.md  machine-learning.md  manual-classification.md  rules-based-classification.md  sampling.md
fetchdata/: __main__.py  fetch_charities.py  fetch_sample.py  fetch_tags.py  utils.py
method/designing-taxonomy/: index.html
method/introduction/: index.html
method/machine-learning/: index.html
method/manual-classification/: index.html
method/rules-based-classification/: index.html
method/sampling/: index.html
notebooks/: icnptso-machine-learning-test.ipynb  icnptso-ml-multistep-test.ipynb  icnptso-ml-tag-test.ipynb  icnptso-sample-results.ipynb  report-charts.ipynb  ukcat-length-comparison.ipynb
other-work/: index.html
src/ukcat/: __main__.py  apply_icnptso.py  apply_ukcat.py  fetch_charities.py  fetch_cics.py  fetch_sample.py  fetch_tags.py  make_docs.py  ml_icnptso.py  settings.py  utils.py
theme/: main.html
ukcat/: __main__.py  apply_icnptso.py  apply_ukcat.py  fetch_charities.py  fetch_sample.py  fetch_tags.py  make_docs.py  ml_icnptso.py  settings.py  tag_list.py  utils.py
ukcat/templates/: tag_list.md.j2  ukcat.md.j2
(+488 files in other folders)
